--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.14.0",
-    "express": "^4.13.3"
+    "cookie-parser": "^1.4.0",
+    "express": "^4.13.3",
+    "morgan": "^1.6.1"
   }
 }
