--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -12,6 +12,10 @@
     "body-parser": "^1.14.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "morgan": "^1.6.1"
+    "express-session": "^1.11.3",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.0",
+    "passport-github": "^1.0.0"
   }
 }
