--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.14.0",
+    "connect-mongodb-session": "^1.0.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "method-override": "^2.3.5",
