--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -16,6 +16,7 @@
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "underscore": "^1.8.3"
   }
 }
