--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
+    "phantomjs": "^1.9.18",
     "underscore": "^1.8.3"
   }
 }
