--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -17,7 +17,10 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
     "passport-github": "^1.0.0",
-    "phantomjs": "^1.9.18",
+    "q": "^1.4.1",
+    "randomstring": "^1.1.0",
+    "request": "^2.64.0",
+    "shelljs": "^0.5.3",
     "underscore": "^1.8.3"
   }
 }
