--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -13,6 +13,7 @@
     "connect-mongodb-session": "^1.0.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "file-stream-rotator": "0.0.6",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
