--- a/RESTFul/package.json
+++ b/RESTFul/package.json
@@ -15,6 +15,7 @@
     "express-cluster": "0.0.4",
     "express-session": "^1.11.3",
     "file-stream-rotator": "0.0.6",
+    "log4js": "^0.6.27",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
